# brandname-generator

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: branding-ci.yml  branding-openrouter-canary.yml  brandpipe-ci.yml
.taskmaster/docs/: prd_bootstrap.md
.taskmaster/tasks/: tasks.json
docs/branding/: README.md  adversarial_similarity_matrix.md  background_daemon_setup.md  broader_scope_shortlist.md  broadside_variation_plan.md  campaign_configuration_reference.md  candidate_batch_screened_v1.csv  candidate_batch_screened_v1_summary.json  candidate_batch_screened_v2.csv  candidate_batch_v1.csv  candidate_batch_v1.json  candidate_batch_v2.json  continuous_pipeline_deferred_backlog.md  continuous_pipeline_test_plan.md  corpus_strategy_execution_plan.md  creative_generation_stack_strategy.md  creative_search_redesign_plan.md  creative_tactics_tight_markets.md  generated_name_candidates_eu_sample.csv  generated_name_candidates_global_balanced_20260216_211010.csv  generated_name_candidates_global_balanced_20260216_211010.json  generated_name_candidates_global_balanced_degraded_20260216_212936.csv  generated_name_candidates_global_balanced_degraded_20260216_212936.json  generated_name_candidates_xrd_seed.csv  legal_handover_packet.md  llm_context.example.json  local_remote_ai_workflow.md  name_decision_memo.md  name_generator_guide.md  name_generator_runs.jsonl  name_screener_readme.md  naming_algorithms_and_libraries.md  naming_brief.md  naming_decision_framework.md  naming_input_corpus_spec_v2.md  naming_phase3_assessment.csv  (+21 more)
scripts/: cleanup_github_actions_runs.py
tests/: test_cleanup_github_actions_runs.py
(+220 files in other folders)
