[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brandpipe"
version = "0.1.0"
description = "Clean-slate branding pipeline CLI"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pseudowords = ["Wuggy"]
browser = ["playwright>=1.52,<2.0"]

[project.scripts]
brandpipe = "brandpipe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
