[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brandpipe"
version = "0.1.0"
description = "Brandpipe generation and validation CLI"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pseudowords = ["Wuggy"]
browser = ["playwright>=1.52,<2.0"]

[project.scripts]
brandpipe = "brandpipe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["brandpipe"]
data_file = "test_outputs/brandpipe/coverage/.coverage"

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "test_outputs/brandpipe/coverage/html"

[tool.coverage.xml]
output = "test_outputs/brandpipe/coverage/coverage.xml"

[tool.coverage.json]
output = "test_outputs/brandpipe/coverage/coverage.json"
pretty_print = true

[tool.coverage.lcov]
output = "test_outputs/brandpipe/coverage/lcov.info"
